# program-slicer-php

./: .project  ApaPhp.cabal  Makefile  README  Setup.lhs  uuagc_options
old/EmbellishedMonotoneFramework/: Program.hs
old/MF/: LiveVariableAnalysis.hs
samples/: big.php  bookexample1.php  bookexample2.php  f2.php  f3.php  f4.php  functest.php  functiontest.php  nofunc.php  randgeval.php  recur.php  sum.php  tough.php
src/: Main.hs
src/Algebra/: CompleteLatticeWithACC.hs
src/Data/: Intercal.hs
src/EMF/: Program.hs
src/EmbellishedMonotoneFramework/: EMF.hs  Program.hs
src/MF/: Analysis.hs  DirectlyRelevantVariables.hs  Expressions.hs  LiveVariableAnalysis.hs  Main.hs  Program.hs  ProgramSlicing.hs  Statements.hs
src/PHP/Parser/: Ast.hs
src/PHP/Parser/Ast/: ArgList.hs  Common.hs  Expr.hs  ExprParse.hs  ExprTypes.hs  Lex.hs  Stmt.hs  StmtParse.hs  StmtTypes.hs  Test.hs
src/PHP/Simple/: Ast2Simple.hs  Expression.ag  Expression.hs  SimpleAst.ag  Statement.ag  Statement.hs  buildag
src/Parser/: Ast.hs
src/Parser/Ast/: ArgList.hs  Common.hs  Expr.hs  ExprParse.hs  ExprTypes.hs  Lex.hs  Stmt.hs  StmtParse.hs  StmtTypes.hs  Test.hs
src/Ruud/: AvailableExpressions.hs  LiveVariables.hs
