Name:               ApaPhp
Version:            1.0
Cabal-Version:      >= 1.2
License:            GPL
Author:             Bram Schuur
                    Ruud Koot <r.koot@students.uu.nl>
                    Henk-Erik van der Hoek
Synopsis:           Program Slicing for PHP
Description:        Program Slicing for PHP
Build-Type:         Simple

Executable apaphp
  Main-Is:          Main.hs
  Build-Depends:    base       >= 4 && < 5
                  , parsec     == 2.1.0.1
                  , containers >= 0.2                  
                  , bytestring
                  , binary
                  , FUtil      == 0.1
                  , derive
                  , MissingH
                  , mtl        == 1.1.0.2
                  , uuagc
                  , graphviz
                  , fgl
  Hs-Source-Dirs:   src/
